# photoSigner

./: AUTHORS  README.md  configure.ac  img.cbp  img.depend  img.layout  main.cpp
src/: Makefile.am  main.cpp
